; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_flow_dissector.c___skb_get_hash.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_flow_dissector.c___skb_get_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.flow_keys = type { i32 }

@hashrnd = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__skb_get_hash(%struct.sk_buff* %0) #0 {
  %2 = alloca %struct.sk_buff*, align 8
  %3 = alloca %struct.flow_keys, align 4
  %4 = alloca i32, align 4
  store %struct.sk_buff* %0, %struct.sk_buff** %2, align 8
  %5 = call i32 (...) @__flow_hash_secret_init()
  %6 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %7 = call i32 @___skb_get_hash(%struct.sk_buff* %6, %struct.flow_keys* %3, i32* @hashrnd)
  store i32 %7, i32* %4, align 4
  %8 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @flow_keys_have_l4(%struct.flow_keys* %3)
  %11 = call i32 @__skb_set_sw_hash(%struct.sk_buff* %8, i32 %9, i32 %10)
  ret void
}

declare dso_local i32 @__flow_hash_secret_init(...) #1

declare dso_local i32 @___skb_get_hash(%struct.sk_buff*, %struct.flow_keys*, i32*) #1

declare dso_local i32 @__skb_set_sw_hash(%struct.sk_buff*, i32, i32) #1

declare dso_local i32 @flow_keys_have_l4(%struct.flow_keys*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
